--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,12 +4,13 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
-body {
+body{
     width: 100%;
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
-    background-color: #000;
+    #background-color: #000;
+	text-shadow: 0 0 3px black;
 }
 
 html {
@@ -66,7 +67,7 @@ a:focus {
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    background-color: #000;
+    #background-color: #000;
 }
 
 .navbar-custom .navbar-brand {
@@ -101,13 +102,13 @@ a:focus {
 .navbar-custom .nav li a:hover {
     outline: 0;
     color: rgba(255,255,255,.8);
-    background-color: transparent;
+    #background-color: transparent;
 }
 
 .navbar-custom .nav li a:focus,
 .navbar-custom .nav li a:active {
     outline: 0;
-    background-color: transparent;
+    #background-color: transparent;
 }
 
 .navbar-custom .nav li.active {
@@ -115,7 +116,7 @@ a:focus {
 }
 
 .navbar-custom .nav li.active a {
-    background-color: rgba(255,255,255,.3);
+    #background-color: rgba(255,255,255,.3);
 }
 
 .navbar-custom .nav li.active a:hover {
@@ -127,7 +128,7 @@ a:focus {
         padding: 20px 0;
         border-bottom: 0;
         letter-spacing: 1px;
-        background: 0 0;
+        #background: 0 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
         -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
         transition: background .5s ease-in-out,padding .5s ease-in-out;
@@ -148,8 +149,8 @@ a:focus {
 	padding-top: 50px;
     text-align: center;
     color: #fff;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center fixed;
-    background-color: #000;
+    ##background: url(../img/intro-bg.jpg) no-repeat bottom center fixed;
+    #background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -162,7 +163,7 @@ a:focus {
 }
 
 .intro .intro-body .brand-heading {
-    font-size: 40px;
+    font-size: 25px;
 }
 
 .intro .intro-body .intro-text {
@@ -176,7 +177,7 @@ a:focus {
     }
 
     .intro .intro-body .brand-heading {
-        font-size: 100px;
+        font-size: 40px;
     }
 
     .intro .intro-body .intro-text {
@@ -265,8 +266,8 @@ a:focus {
 	padding-top: 50px;
     color: #fff;
     height: auto;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center fixed;
-    background-color: #000;
+    ##background: url(../img/intro-bg.jpg) no-repeat bottom center fixed;
+    #background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -274,13 +275,13 @@ a:focus {
 }
 
 .download-section {
-    width: 100%;
+    width: 100%;	
 	padding-bottom: 50px;
 	padding-top: 50px;
     color: #fff;
     height: auto;
-    background: url(../img/intro-bg.jpg) no-repeat bottom center fixed;
-    background-color: #000;
+    #background: url(../img/intro-bg.jpg) no-repeat bottom center fixed;
+    #background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -321,7 +322,7 @@ a:focus {
 .btn-default {
     border: 1px solid #42dca3;
     color: #42dca3;
-    background-color: transparent;
+    #background-color: transparent;
 }
 
 .btn-default:hover,
@@ -329,7 +330,7 @@ a:focus {
     border: 1px solid #42dca3;
     outline: 0;
     color: #000;
-    background-color: #42dca3;
+    #background-color: #42dca3;
 }
 
 ul.banner-social-buttons {
