--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -17,7 +17,10 @@ html {
     width: 100%;
     height: 100%;
 }
-
+p.inset
+{
+	font-size:1em;
+}
 h1,
 h2,
 h3,
@@ -260,7 +263,6 @@ a:focus {
 }
 
 .content-section {
-	border-top-style: dotted;
 	width:100%;	
 	padding-bottom: 50px;
 	padding-top: 50px;
