--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -7,7 +7,7 @@
 body{
     width: 100%;
     height: 100%;
-    font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
     #background-color: #000;
 	text-shadow: 0 0 3px black;
@@ -19,7 +19,7 @@ html {
 }
 p.inset
 {
-	font-size:1em;
+	font-size:1.25em;
 }
 h1,
 h2,
@@ -166,11 +166,11 @@ a:focus {
 }
 
 .intro .intro-body .brand-heading {
-    font-size: 25px;
+    font-size: 30px;
 }
 
 .intro .intro-body .intro-text {
-    font-size: 18px;
+    font-size: 23px;
 }
 
 @media(min-width:768px) {
